# fishbowlpy

./: .command  .gitignore  .pypirc_bkp  CODEOFCONDUCT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  requirements.txt  setup.cfg  test.py  test_api.py
docs/: .buildinfo  conf.py  fishbowlpy.html  fishbowlpy.utils.html  genindex.html  index.html  index.rst  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: environment.pickle  fishbowlpy.doctree  fishbowlpy.utils.doctree  index.doctree  modules.doctree
docs/_build/: .buildinfo  fishbowlpy.html  fishbowlpy.utils.html  genindex.html  modules.html  objects.inv  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  fishbowlpy.doctree  fishbowlpy.utils.doctree  index.doctree  modules.doctree
docs/_build/_sources/: fishbowlpy.rst.txt  fishbowlpy.utils.rst.txt
docs/_static/: documentation_options.js
fishbowlpy/: browserdriver.py  config.py  drivertype.py  fishbowlclient.py  fishbowlloginmanager.py
fishbowlpy/certs/: fishbowlapp.crt
source/: conf.py  index.rst  modules.rst
src/fishbowlpy/: __init__.py  browserdriver.py  config.py  drivertype.py  filedownloader.py  fishbowlapi.py  fishbowlclient.py  fishbowldatatypes.py  fishbowlloginmanager.py  urlmanager.py
src/fishbowlpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/fishbowlpy/utils/: logger.py
tests/: test.py  test_api.py  test_client.py  test_fishbowlpy.py
