[metadata]
name = fishbowlpy
version = 0.0.5
author = Mukul Bindal
author_email = mukulbindal170299@gmail.com
description = Python package to interact with fishbowlapp.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mukulbindal/fishbowlpy
project_urls =
    Bug Tracker = https://github.com/mukulbindal/fishbowlpy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = file: requirements.txt

[options.packages.find]
where = src
